--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
 	<script src="script.js"></script>
 	<script src="class.js"></script>
+	<script src="class God.js" > </script>
+	<script src="clas vorsord.js"> </script>
+	<script src="class Graseater.js" > </script>
+	<script src="class gishatich.js" ></script>
+	<script src="class LivingCreature.js"></script>
+	<script src="class gras.js"></script>
 
 </head>
 
