--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+<button id="b" onchange="but()" >Clicl</button>
 	    <div class="container" >
 				<table align="center" id="legend">
 					<tr>
