--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 	<script src="socket.io/socket.io.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
 	<script src="clent.js"></script>
-	
 	<style>
 			#legend {position: absolute;top: 0;right: 0;width: 800px;} .legend-color {width: 30px;height: 30px;} td {border: 1px solid black; font-size: 14px; padding-left: 5px;}
+		    #b{padding: 10px;font-size: 20px;text-shadow: 2px 1px white;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;border-radius: 20px;background-color: "#acacac";}
+		
 		</style>
 </head>
 
 <body>
-<button id="b" onchange="but()" >Clicl</button>
+<button id="b"  >Snow</button>
 	    <div class="container" >
 				<table align="center" id="legend">
 					<tr>
