--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 	<script src="clent.js"></script>
 	<style>
 			#legend {position: absolute;top: 0;right: 0;width: 800px;} .legend-color {width: 30px;height: 30px;} td {border: 1px solid black; font-size: 14px; padding-left: 5px;}
-		    #b{padding: 10px;font-size: 20px;text-shadow: 2px 1px white;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;border-radius: 20px;background-color: "#acacac";}
-		
+		    #Snow{padding: 10px;font-size: 20px;text-shadow: 2px 1px white;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;border-radius: 20px;}
+		    #Demon{padding: 10px;font-size: 20px;text-shadow: 2px 1px red;font-family: 'Times New Roman', Times, serif;border-radius: 20px;background-color: red}
+		#Start{padding: 10px;font-size: 20px;border-radius: 20px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;color: green;}
+		#Summer{text-shadow: 2px 1px green;padding: 10px;font-size: 20px;border-radius: 20px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;color: black;}}
 		</style>
 </head>
 
 <body>
-<button id="b"  >Snow</button>
+<button id="Snow"  >Snow</button>
+<button id="Summer"  >Summer</button>
+<button id="Demon"  >Destroys</button>
+<button id="Start"  >Start live</button>
 	    <div class="container" >
 				<table align="center" id="legend">
 					<tr>
