--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	
 	<button onclick="snow()" id="Snow">Snow</button>
-	<button id="Summer">Summer</button>
+	<button id="Summer" onclick="summer()" >Summer</button>
 	<button id="Demon" onclick="demoncreate()">Destroys</button>
 	<button id="Start" onclick="live()">Start live</button>
 </div>
